# xstatic-js-yaml

./: .gitreview  LICENSE  README.txt  setup.cfg  setup.py
xstatic/pkg/js_yaml/: __init__.py
