[metadata]
name = XStatic-JS-Yaml
description = JS-Yaml 3.13.1 (XStatic packaging standard)
description-file = README.rst
maintainer = xinni.ge
maintainer-email = xinni.ge@ntt.com
home-page = https://github.com/nodeca/js-yaml
keywords = js_yaml xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
